[package]
name = "imp"
version = "0.0.0"
authors = ["Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
description = "In-place sparse merkle tree multiproof database"
repository = "https://github.com/lightclient/imp"
keywords = ["blockchain", "merkle-proof", "multiproof", "ethereum", "ee"]

[dependencies]
arrayref = "0.3.5"
sha2 = "0.8.0"

[dev-dependencies]
bigint = "4.4.1"

[features]
default = ["std"]
std = []
